<resources>
    <string name="app_name">SinaApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="empty"></string>
    <string name="comment">理性思考，欢迎指教</string>
    <string name="btn">发送</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="resigeteraccount">注册账号</string>
    <string name="rememberpass">记住密码</string>
    <string name="loading">loading...,please wait patiently</string>
</resources>
