<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@mipmap/bc">


    <EditText
        android:id="@+id/editaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textAutoComplete"
        android:hint="@string/account"
        android:drawableRight="@mipmap/unfold"
        android:background="@android:drawable/alert_light_frame"/>

    <EditText
        android:id="@+id/editpwd"
        android:layout_below="@id/editaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@android:drawable/alert_light_frame"
        />

    <Button
        android:id="@+id/login_con"
        android:layout_below="@id/editpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@drawable/btn_login"
        android:text="@string/login"
        android:textSize="20sp"
        android:background="#0099FF"/>

    <RadioGroup
        android:id="@+id/RadioGroup01"
        android:layout_below="@id/login_con"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_x="3px"
        android:layout_y="54px"
        >

        <CheckBox
            android:id="@+id/rbt_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rememberpass" />

        <Button
            android:id="@+id/tv_resigeter"
            android:clickable="true"
            android:background="#00000000"
            android:layout_marginLeft="350px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resigeteraccount"
            android:textColor="@drawable/btn_login"/>

    </RadioGroup>



</RelativeLayout>